--- a/styles/main-section.css
+++ b/styles/main-section.css
@@ -1,27 +1,3 @@
-/**
-
-body {
-  position: relative;
-  margin: 0;
-}
-
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-image: url(../images/background-3.png);
-  background-size: cover;
-  background-position: left bottom;
-  background-repeat: no-repeat;
-  background-blend-mode:color ;
-}
-
-**/
-
 
 body {
   margin: 0;
@@ -30,71 +6,6 @@ body {
   flex-direction: column;
 }
 
-
-
-/** ACCORDION MENU**/
-/**
-.accordion-menu {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 240px;
-}
-
-
-.accordion-menu-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-
-
-}
-
-.accordion-menu-header {
-  font-size: 26px;
-  color: rgb(20, 1, 1);
-  text-shadow: 0 0 2px rgba(232, 12, 12, 0.4);
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  cursor: pointer;
-  padding: 10px;
-  white-space: nowrap;
-}
-
-
-.accordion-menu-content {
-  max-height: 0px;
-  overflow: hidden;
-  transition: max-height 0.5s ease;
-  padding-top: 0px;
-  padding-bottom: 0x;
-  padding-left: 18px;
-  padding-right: 18px;
-  font-size: 18px;
-  line-height: 50px;
-  display: flex; flex-direction: column;
-  align-items: center;
-  color: rgb(20, 1, 1);
-  text-shadow: 0 0 2px rgba(232, 12, 12, 0.4);
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  cursor: pointer;
-  background-color: rgb(239, 231, 231);
-}
-
-.accordion-menu-content p {
-  margin: 0;
-  font-size: 18px;
-  
-}
-
-.accordion-menu-item.active .accordion-menu-content {
-  max-height: 1000px;
-  transition: 2s;
-}
-
-**/
-
-/** NOVA ACCORDION**/
 
 .accordion-container {
   padding-top: 240px;
@@ -122,8 +33,9 @@ body {
 
 .accordion__content1 {
   justify-content: space-between;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+
 }
 
 .accordion__label,
@@ -142,6 +54,7 @@ body {
   font-size: 26px;
   color: rgb(20, 1, 1);
   text-shadow: 0 0 2px rgba(232, 12, 12, 0.4);
+  border-radius: 10px;
 }
 
 .accordion__label1 {
@@ -150,9 +63,8 @@ body {
   color: rgb(20, 1, 1);
   text-shadow: 0 0 2px rgba(232, 12, 12, 0.4);
   text-align: center;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-
+  border-radius: 5px;
+  white-space: nowrap;
 }
 
 .accordion__label:hover,
@@ -170,8 +82,12 @@ body {
 }
 
 .accordion__content1 {
-  background-color: rgb(239, 231, 231);
+  background-color: rgb(233, 231, 231);
   font-size: 16px;
+  margin-top: -34px;
+  padding-top: 40px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
 .accordion__input,
